@@ -23,6 +23,8 @@
 #define LSP_PLUG_IN_TEST_FW_MAIN_TOOLS_H_
 
 #include <lsp-plug.in/test-fw/version.h>
+
+#include <lsp-plug.in/test-fw/main/status.h>
 #include <lsp-plug.in/test-fw/types.h>
 
 #include <stdarg.h>
