@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.13 ===
+* Moved status codes to separate header.
 
 === 1.0.12 ===
 * Removed lsp-common-lib from dependencies (breaking circular dependencies).
